Name:                numbers-vectors-trees
Version:             0.1.3
Cabal-Version:       >= 1.2
Synopsis:            
Category:            
Description:
  Source code for a series of posts on <http://conal.net/blog>.
  See README.markdown
Author:              Conal Elliott
Maintainer:          conal@conal.net
Copyright:           (c) 2011 by Conal Elliott
License:             BSD3
License-File:        COPYING
Stability:           experimental
build-type:          Simple
Package-Url:         http://github.com/conal/numbers-vectors-trees

Library
  hs-Source-Dirs:      src
  Extensions:
  Build-Depends:       base<5, functor-combo, applicative-numbers
  Exposed-Modules:     
     TNat
     Nat
     BNat
     ShowF
     ComposeFunctor
     Vec
     VecNum
     Left
     LeftNum
     TreeScan
                       
  ghc-options:         -Wall

--  ghc-prof-options:    -prof -auto-all 
